[package]
name = "nopu"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/simonxabris/nopu"
description = "CLI tool to purge all node_modules under current directory"


[[bin]]
name = "nopu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs"]} 
